add option defaultAxisOrientation and enable orientation for x/y axis

--- a/public/wafer_map_vis_params.html
+++ b/public/wafer_map_vis_params.html
@@ -53,4 +53,13 @@
       <input class="kuiCheckBox" id="showLabel" type="checkbox" ng-model="editorState.params.showLabel">
     </div>
   </div>
+  
+  <div class="kuiSideBarFormRow">
+    <label class="kuiSideBarFormRow__label" for="defaultAxisOrientation">
+      Default Axis Orientation
+    </label>
+    <div class="kuiSideBarFormRow__control">
+      <input class="kuiCheckBox" id="reverseColor" type="checkbox" ng-model="editorState.params.defaultAxisOrientation">
+    </div>
+  </div>
 </div>
