add significant figures for color legend lable, fix count metric bug
(cherry picked from commit ef3d18c41428ec215dde8fbe5dbabb557e167647)

--- a/public/wafer_map_vis_params.html
+++ b/public/wafer_map_vis_params.html
@@ -49,6 +49,20 @@
       ></select>
     </div>
   </div>
+  
+  <div class="kuiSideBarFormRow">
+    <label class="kuiSideBarFormRow__label" for="significantFigure">
+      Significant Figures
+    </label>
+    <div class="kuiSideBarFormRow__control">
+      <select
+        id="significantFigure"
+        class="form-control"
+        ng-model="editorState.params.significantFigure"
+        ng-options="mode for mode in config.collections.significantFigures"
+      ></select>
+    </div>
+  </div>
 
   <div class="kuiSideBarFormRow">
     <label class="kuiSideBarFormRow__label" for="reverseColor">
