--- a/public/wafer_map_vis_params.html
+++ b/public/wafer_map_vis_params.html
@@ -1,18 +1,18 @@
-<div class="kuiSideBarSection">
- <div class="kuiSideBarFormRow">
-    <label class="kuiSideBarFormRow__label" for="addTooltip">
+<div class="visEditorSidebar">
+ <div class="visEditorSidebar__formRow">
+    <label class="visEditorSidebar__formLabel" for="addTooltip">
       Show Tooltips
     </label>
-    <div class="kuiSideBarFormRow__control">
+    <div class="visEditorSidebar__formControl">
       <input class="kuiCheckBox" id="addTooltip" type="checkbox" ng-model="editorState.params.addTooltip">
     </div>
   </div>
 
-  <div class="kuiSideBarFormRow">
-    <label class="kuiSideBarFormRow__label" for="colorSchema">
+  <div class="visEditorSidebar__formRow">
+    <label class="visEditorSidebar__formLabel" for="colorSchema">
       Color Schema
     </label>
-    <div class="kuiSideBarFormRow__control">
+    <div class="visEditorSidebar__formControl">
       <select
         id="colorSchema"
         class="form-control"
@@ -22,11 +22,11 @@
     </div>
   </div>
   
-  <div class="kuiSideBarFormRow">
-    <label class="kuiSideBarFormRow__label" for="colorScale">
+  <div class="visEditorSidebar__formRow">
+    <label class="visEditorSidebar__formLabel" for="colorScale">
       Color Scale
     </label>
-    <div class="kuiSideBarFormRow__control">
+    <div class="visEditorSidebar__formControl">
       <select
         id="colorScale"
         class="form-control"
@@ -36,11 +36,11 @@
     </div>
   </div>
   
-  <div class="kuiSideBarFormRow">
-    <label class="kuiSideBarFormRow__label" for="chartType">
+  <div class="visEditorSidebar__formRow">
+    <label class="visEditorSidebar__formLabel" for="chartType">
       Chart Type
     </label>
-    <div class="kuiSideBarFormRow__control">
+    <div class="visEditorSidebar__formControl">
       <select
         id="chartType"
         class="form-control"
@@ -50,11 +50,11 @@
     </div>
   </div>
   
-  <div class="kuiSideBarFormRow">
-    <label class="kuiSideBarFormRow__label" for="significantFigure">
+  <div class="visEditorSidebar__formRow">
+    <label class="visEditorSidebar__formLabel" for="significantFigure">
       Significant Figures
     </label>
-    <div class="kuiSideBarFormRow__control">
+    <div class="visEditorSidebar__formControl">
       <select
         id="significantFigure"
         class="form-control"
@@ -64,30 +64,32 @@
     </div>
   </div>
 
-  <div class="kuiSideBarFormRow">
-    <label class="kuiSideBarFormRow__label" for="reverseColor">
+  <div class="visEditorSidebar__formRow">
+    <label class="visEditorSidebar__formLabel" for="reverseColor">
       Reverse Color
     </label>
-    <div class="kuiSideBarFormRow__control">
+    <div class="visEditorSidebar__formControl">
       <input class="kuiCheckBox" id="reverseColor" type="checkbox" ng-model="editorState.params.reverseColor">
     </div>
   </div>
   
-  <div class="kuiSideBarFormRow">
-    <label class="kuiSideBarFormRow__label" for="showLabel">
+  <div class="visEditorSidebar__formRow">
+    <label class="visEditorSidebar__formLabel" for="showLabel">
       Show Label
     </label>
-    <div class="kuiSideBarFormRow__control">
+    <div class="visEditorSidebar__formControl">
       <input class="kuiCheckBox" id="showLabel" type="checkbox" ng-model="editorState.params.showLabel">
     </div>
   </div>
   
-  <div class="kuiSideBarFormRow">
-    <label class="kuiSideBarFormRow__label" for="defaultAxisOrientation">
+  <div class="visEditorSidebar__formRow">
+    <label class="visEditorSidebar__formLabel" for="defaultAxisOrientation">
       Default Axis Orientation
     </label>
-    <div class="kuiSideBarFormRow__control">
+    <div class="visEditorSidebar__formControl">
       <input class="kuiCheckBox" id="reverseColor" type="checkbox" ng-model="editorState.params.defaultAxisOrientation">
     </div>
   </div>
 </div>
+
+
